m2/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Sun Jun 14 20:13:01 2026
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.17.0.2/32 ! -i docker0 -j DROP
-A PREROUTING -d 172.18.0.2/32 ! -i br-282e111dc335 -j DROP
COMMIT
# Completed on Sun Jun 14 20:13:01 2026
# Generated by iptables-save v1.8.7 on Sun Jun 14 20:13:01 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.2/32 ! -i br-282e111dc335 -o br-282e111dc335 -p tcp -m tcp --dport 5002 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-282e111dc335 -o br-282e111dc335 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-282e111dc335 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-282e111dc335 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-282e111dc335 -j ACCEPT
-A DOCKER-USER -s 172.18.0.0/16 -d 10.152.152.111/32 -j ACCEPT
-A DOCKER-USER -s 172.18.0.0/16 -d 10.152.152.10/32 -j ACCEPT
-A DOCKER-USER -s 172.18.0.0/16 -d 10.152.128.0/18 -j DROP
-A DOCKER-USER -s 172.18.0.0/16 -d 185.100.87.0/24 -j DROP
COMMIT
# Completed on Sun Jun 14 20:13:01 2026
# Generated by iptables-save v1.8.7 on Sun Jun 14 20:13:01 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-282e111dc335 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8888 -j DNAT --to-destination 172.17.0.2:8080
-A DOCKER -d 10.152.152.100/32 ! -i br-282e111dc335 -p tcp -m tcp --dport 5002 -j DNAT --to-destination 172.18.0.2:5002
COMMIT
# Completed on Sun Jun 14 20:13:01 2026
